syntax = "proto3";

// Importa os tipos de mensagens padrão do gRPC
import "google/protobuf/empty.proto";

// Definição do serviço gRPC para orders
service OrderService {
    // Método para obter informações de um cliente pelo ID
    rpc GetCustomerInfo(CustomerRequest) returns (CustomerResponse);
}

// Mensagem de solicitação para obter informações de um cliente
message CustomerRequest {
    // ID do cliente
    string customer_id = 1;
}

    string customer_id = 1;
    string customer_name = 2;
}


}
